Maybe fixed cast on mobile

--- a/castMobile.css
+++ b/castMobile.css
@@ -43,8 +43,8 @@ h2 {
     main ul li {
         display: block;
         overflow-wrap: break-word;
-        margin: 1500px auto;
-        font-size: 25px;
+        margin: 1600px auto;
+        font-size: 20px;
         scale: 3.75;
     }
 
